--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,9 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: sans-serif;  
+}
+body{
+  background-color: #0F0F0F;
+  color: #F1F1F1;
 }
