--- a/src/components/User.css
+++ b/src/components/User.css
@@ -1,21 +1,32 @@
-.user{
-    background-color: #17191A;
-    width: 25rem;
+.user-info{
+    /* background-color: #0D1117; */
+    background-color: #06080e;
+    width: 100%;
     padding: 2rem;
-    border-radius: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    margin: auto;
     gap: 1.2rem;
 }
-.user img{
-    width: 150px;
-    height: 150px;
-    border-radius: 25px 0;
-    border: 4px solid #5d55fa;
+.username{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.user p{
+.username h3{
+    margin-top: 1rem;
+    color: #8b949e;
+    margin-bottom: 2.5rem;
+}
+.user-info img{
+    width: 95%;
+    /* height: 50%; */
+    border-radius: 50%;
+    border: 5px solid #5d55fa;
+    margin-top: 10%;
+}
+.user-info p{
     font-size: 1.2rem;
 }
 .location{
@@ -23,10 +34,6 @@
     align-items: start;
     justify-content: flex-start;
     gap: .4rem;
-}
-.location svg{
-    color: red;
-    font-size: 1.2rem;
 }
 .info{
     display: flex;
@@ -42,26 +49,51 @@
     gap: .5rem;
 }
 
-.followers svg{
-    color: #2caeba;
-    font-size: 1.2rem;    
+svg{
+    color: #c9d1d9;
+    font-size: 1.3rem;    
 }
-.following svg{
-    color:#5d55fa;
-    font-size: 1.2rem
-}
+
 .btn{
     text-decoration: none;
     border: 2px solid #5d55fa;
     background-color: transparent;
     color: #5d55fa;
-    padding: .5rem;
-    border-radius: .5rem;
+    padding: .5rem .7rem;
+    margin-top: 2.5rem;
+    border-radius: 5rem;
     font-size: 1.3rem;
+    font-weight: bold;
     transition: .3s;
 }
 .btn:hover{
     background-color: #5d55fa;
     color: #17191A
+}
+
+
+@media screen and (min-width: 600px){
+    .user-container{
+        width: 100%;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: row;
+        margin: 0;
+        position: relative;
+    }
+    .username{
+        align-items: flex-start;
+    }
+    .user-info{
+        position: fixed;
+        width: 27rem;
+        height: 100vh;
+        align-items: flex-start;
+        justify-content: flex-start;
+        padding: 0 auto;
+    }
+    .user-info img{
+        margin: 3rem auto 1rem;
+    }
 }
 
