--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -1,8 +1,9 @@
 .home-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    position: relative;
+    /* align-items: center; */
+    /* justify-content: space-between; */
 }
 .title{
     margin: 1rem;
