--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,39 +1,44 @@
-.search-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    width: 25rem;
-    height: 8rem;
-    background-color: #17191A;
-    border-radius: 20px;
-    margin-bottom: 1rem;
+.search-container{    
+    width: 100%;
+    height: 4rem;
+    background-color: #161B22;
     overflow: hidden;
+    position: fixed ;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+}
+.input-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 .seach-input{
     background-color: #f1f1f1;
-    width: 15rem;
+    width: 30rem;
     height: 2.5rem;
     border: none;
-    border-radius: 10px;    
+    border-radius: 10px 0 0 10px ;    
     padding-left: .5rem;
-    margin-right: .5rem;    
+    font-size: 1.3rem;
 }
 .seach-input:focus{
     box-shadow: 0 0 0 0;
     outline: 0;
 }
 .search-btn{
-    background-color: #0F0F0F;
-    color: #f1f1f1;
+    background-color: #5d55fa;
     border: none;
-    border-radius: 10px;
+    border-radius: 0 10px 10px 0;
     width: 2.5rem;
     height: 2.5rem;
     cursor: pointer;
     transition: .3s;
-    margin: 0;
+}
+.search-btn svg{
+    color: #f2f2f2;
 }
 .search-btn:hover{
-    background-color: #05060E;
+    background-color: #423cb0;;
 }
