--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: sans-serif;  
+  overflow-x: hidden;
+  font-family: 'Ubuntu', sans-serif;
 }
 body{
-  background-color: #0F0F0F;
-  color: #F1F1F1;
+  background-color: #0D1117;
+  color: #c9d1d9;  
+}
+a{
+  text-decoration: none;
+  color: auto;
 }
